--- a/build.xml
+++ b/build.xml
@@ -2,6 +2,7 @@
 
     <property name="src.dir"     value="src"/>
     <property name="build.dir"   value="build"/>
+    <property name="doc.dir" value ="doc"/>
     <property name="classes.dir" value="${build.dir}/classes"/>
     <property name="jar.dir"     value="${build.dir}/jar"/>
 
